# Fractal

./: Fractal.sln
Dependencies/OpenGL/lib/: freeglut_staticd.lib  freeglutd.exp
Fractal/: Fractal.vcxproj  Fractal.vcxproj.filters  Fractals.c  Fractals.cpp  Shader.h  util.c  util.cpp  window.cpp
Fractal/Debug/: vc120.idb
Fractal/Debug/Fractal.tlog/: CL.read.1.tlog
Fractal/x64/Debug/: vc120.idb
Visual Studio/: Fractal.sln
Visual Studio/Fractal/: 2d_fractals.frag  2d_fractals.fs  2d_fractals.vs  3d_fractals.frag  3d_fractals.fs  Fractal.vcxproj  Fractal.vcxproj.filters  Fractals.cpp  Fractals.h  GUI.APS  GUI.cpp  GUI1.cpp  Program.cpp  Program.h  Shader.cpp  Shader.h  blankVertex.glsl  ducks.glsl  julia.glsl  mbrot.glsl  mbrot_frag.glsl  mbrot_vert.glsl  orbitTrap.glsl  util.cpp  util.h  util.h.gch  vertex.glsl
Visual Studio/Fractal/Debug/: vc120.idb
Visual Studio/x64/Debug/: Fractal.ilk  julia_frag.glsl  julia_vert.glsl  mbrot_frag.glsl  mbrot_vert.glsl  run.bat
linux/: Makefile  Makefile.in  autogen.sh  config.h  config.status  configure  configure.ac  configure.scan
linux/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
linux/doc/: Makefile  Makefile.am  Makefile.in
linux/man/: Makefile  Makefile.am  Makefile.in
linux/script/: Makefile  Makefile.am  Makefile.in
linux/src/: 2d_fractals.fs  Fractal  GUI.cpp  GUI.h  Makefile  Makefile.am  Makefile.in  color_picker.fs  fragment.glsl  mbrot.glsl  util.cpp  vertex.glsl
linux/src/.deps/: Fractals.Po  GUI.Po  util.Po
x64/Debug/: Fractal.ilk  mbrot.glsl
(+97 files in other folders)
