#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(Fractal, 0.4, danielgrimshaw42@gmail.com)
AM_INIT_AUTOMAKE(Fractal, 0.4)
AC_OUTPUT(Makefile src/Makefile doc/Makefile man/Makefile script/Makefile)
AC_CONFIG_HEADERS([config.h])
# Checks for programs.
AC_PROG_CXX
# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_OUTPUT
